[gd_scene load_steps=3 format=3 uid="uid://oo7n04jnommw"]

[ext_resource type="Script" path="res://Events/event_choice/choice_coin_box.gd" id="1_iwl47"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w6etj"]

[node name="ChoiceCoinBox" type="Control"]
custom_minimum_size = Vector2(200, 140)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iwl47")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(200, 140)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -40.0
offset_right = 72.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="TargetLabel" type="Label" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Target:"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="Panel/VBoxContainer/TargetLabel"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w6etj")

[node name="CoinContainer" type="GridContainer" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="FlipButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 20)
layout_mode = 2
text = "Flip"

[node name="CancelButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 20)
layout_mode = 2
text = "Cancel"

[node name="StopButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(70, 20)
layout_mode = 2
text = "Stop"

[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/FlipButton" to="." method="_on_FlipButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/StopButton" to="." method="_on_StopButton_pressed"]
